--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Created By Vijay Using Mapbox and weatherstack api</p>
         <img class="portrait" src="/img/me.png">
     </div>
     
